Retrospect on SalesEngine

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -13,44 +13,18 @@
     / Included CSS Files
     = stylesheet_link_tag "app", "theme"
     = javascript_include_tag "foundation/modernizr.foundation"
-    
+   
+
   %body{class: page_classes}
     .row
       .twelve.columns
-        %h2
+        %h2#heading
           %a{href: "/"}= data.site.title
         %hr
     .row
-      .eight.columns
-        = yield
+      #articles.ten.columns
+        .articles-container
+          = yield
       / Application Javascript, safe to override
       = javascript_include_tag "app"
-      %aside.four.columns
-        .panel
-          - if paginate
-            %p
-              Page
-              = page_number
-              of
-              = num_pages
-        %dl.tabs
-          %dd.active
-            %a{href: "#recent"} Recent Articles
-          %dd
-            %a{href: "#tags"} Tags
-        %ul.tabs-content
-          %li#recentTab.active
-            %h4 Recent Articles
-            %ul.disc
-              - blog.articles[0...10].each do |article|
-                %li
-                  %a{href: "#{article.url}"}
-                    = article.title
-                  %span= article.date.strftime('%b %e')
-          %li#tagsTab
-            %h4 Tags
-            %ul.disc
-              - blog.tags.each do |tag, articles|
-                %li
-                  %a{href: "#{tag_path tag}"}
-                    = "#{tag} (#{articles.size})"
+      
